Fix letter spacing, font size

--- a/less/quotable.less
+++ b/less/quotable.less
@@ -166,7 +166,7 @@ canvas {
       background-image: @quote-mark-path;
       background-repeat: no-repeat;
       background-size: @quote-width @quote-height;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
     }
 
     &.poster-theme1 {
@@ -386,7 +386,7 @@ canvas {
         display: block;
         margin-top: 0;
         text-transform: uppercase;
-        letter-spacing: 2px;
+        letter-spacing: 4px;
         font-family: @font-family-medium;
     }
 
